<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.frogmouth.rnd</groupId>
        <artifactId>eofff</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>
    <artifactId>dash</artifactId>
    <packaging>jar</packaging>
    <name>dash</name>
    <properties>
        <glassfish.jaxb.version>3.0.2</glassfish.jaxb.version>
        <jakarta.activation.version>2.1.0</jakarta.activation.version>
        <jakarta.xml.bind.version>3.0.1</jakarta.xml.bind.version>
        <jaxb.api.version>2.3.0</jaxb.api.version>
        <jaxbmavenplugin.version>2.5.0</jaxbmavenplugin.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>isobmff</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgument>--add-modules=jdk.incubator.foreign</compilerArgument>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.evolvedbinary.maven.jvnet</groupId>
                <artifactId>jaxb30-maven-plugin</artifactId>
                <version>0.15.0</version>
                <configuration>
                    <schemaDirectory>src/main/xsd</schemaDirectory>
                    <schemaIncludes>
                        <include>DASHSchema/DASH-MPD.xsd</include>
                    </schemaIncludes>
                    <schemaExcludes>
                        <exclude>*.mpd</exclude>
                    </schemaExcludes>
                    <bindingDirectory>src/main/xjb</bindingDirectory>
                    <bindingIncludes>
                        <include>DASH-MPD.xjb</include>
                    </bindingIncludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- java source code formatter -->
                <groupId>com.theoryinpractise</groupId>
                <artifactId>googleformatter-maven-plugin</artifactId>
                <version>${googleformatter.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>reformat-sources</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <style>AOSP</style>
                            <fixImports>true</fixImports>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- jacoco plugin for test coverage report -->
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-modules=jdk.incubator.foreign</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
